--- a/index.html
+++ b/index.html
@@ -9,6 +9,17 @@
     <script src="js/script.js"></script>
 </head>
 <body>
+    <div class="pre">
+        <div class="first">
+            <img src="tel.png" alt="">
+            <h2>CALL : +01 1234567890</h2>
+        </div>
+        <div class="second">
+            <img src="fb.png" alt="">
+            <img src="twitter.png" alt="">
+            <img src="instagram.png" alt="">
+        </div>
+    </div>
     <header>
         <div class="logo">
             <img src="logo.png" alt="">
@@ -17,34 +28,53 @@
             <a href="#"><h1>Home</h1></a>
             <a href="#"><h1>About</h1></a>
             <a href="#"><h1>News</h1></a>
+            <a href="#"><h1>History</h1></a>
             <a href="#"><button><h1>Contact</h1></button></a>
         </div>
-        <div class="buy">
-            <img src="medicine.png" alt="">
-            <button><h2>Buy Now</h2></button>
-        </div>
     </header>
+    <div class="buy">
+        <div class="first2">
+            <img src="medicine.png" alt="">
+        </div>
+        <div class="texte">
+            <div class="sp">
+                <h2>Welcome To Our</h2>
+            </div>
+            <h1>Online Medicine</h1>
+            <p>
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+            </p>
+            <button><h3>Buy Now</h3></button>
+        </div>
+    </div>
     <div class="content">
         <div class="cont1">
-            <img src="" alt="">
+            <img src="delivery.png" alt="">
             <h2>FAST DELIVERY</h2>
             <p>It is a long established fact that a reader will be distracted by</p>
         </div>
         <div class="cont2">
-            <img src="" alt="">
+            <img src="driver-license.png" alt="">
             <h2>LICENSE OF GOVERNMENT</h2>
             <p>It is a long established fact that a reader will be distracted by</p>
         </div>
         <div class="cont3">
-            <img src="" alt="">
+            <img src="24h.png" alt="">
             <h2>SUPPORT24/7</h2>
             <p>It is a long established fact that a reader will be distracted by</p>
         </div>
     </div>
     <div class="block">
-        <h1>YOU GET ANY MEDICINE ON <span>10% DISCOUNT</span></h1>
-        <p>It is a long established fact that a reader will be distracted by</p>
-        <button>Buy Now</button>
+        <div class="texte1">
+            <div class="again">
+                <h1>YOU GET ANY MEDICINE ON <span>10% DISCOUNT</span></h1>
+                <p>It is a long established fact that a reader will be distracted by</p>
+                <button>Buy Now</button>
+            </div>
+        </div>
+        <div class="texte2">
+            <img src="fond2.jpg" alt="">
+        </div>
     </div>
     <div class="container1">
         <div class="diapo">
@@ -58,12 +88,16 @@
                 <h3>Health <span>$</span>30</h3>
             </div>
         </div>
+    </div>
+    <div class="but">
         <button>See more</button>
     </div>
     <div class="about_US">
         <h1>About US</h1>
         <img src="about.png" alt="">
-        <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
+        <div class="texte3">
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it</p>
+        </div>
         <button>Read More</button>
     </div>
     <div class="clients">
@@ -71,41 +105,80 @@
         <div class="box">
             <article>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</article>
         </div>
+        <div class="cli">
+            <img src="client.png" alt="">
+        </div>
+        <h2>RANDOMISED</h2>
+        <p>Client</p>
+        <img src="quote.png" alt="">
     </div>
     <div class="request">
-        <h1>Request a call</h1>
-        <div class="right">
-            <h2>rigth</h2>
-        </div>
         <div class="left">
+            <h1>Request a call</h1>
+            <form>
+                <div class="form-group">
+                  <label for="exampleInputName1"><p>Name</p></label>
+                  <input type="text" class="form-control" id="exampleInputName1">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputNumber1"><p>Phone Number</p></label>
+                  <input type="text" class="form-control" id="exampleInputNumber1">
+                </div>
+                <div class="form-group">
+                  <label for="exampleInputEmail1"><p>Email</p></label>
+                  <input type="email" class="form-control" id="exampleInputEmail1">
+                </div>
+                <div class="form-group ">
+                  <label for="inputState"><p>Select medicine</p></label>
+                  <select id="inputState" class="form-control">
+                    <option selected>Medicine 1</option>
+                    <option selected>Medicine 2</option>
+                    <option selected>Medicine 3</option>
+                  </select>
+                </div>
+                <div class="form-group" id="message">
+                  <label for="exampleInputMessage"><p>Message</p></label>
+                  <input type="text" class="form-control" id="exampleInputMessage">
+                </div>
+                <button type="submit" class="">Send</button>
+            </form>
+        </div>
+        <div class="right">
             <h1>Get Now Medicines</h1>
+            <div class="texte4">
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+            </div>
         </div>
-        <button>Send</button>
     </div>
-
-    <footer>
-        <div class="contact">
-            <h1>Contact</h1>
-            <div class="tel">
-                <img src="tel.png" alt="">
-                <h2>+01 123567894</h2>
+    <div class="end">
+        <footer>
+            <div class="contact">
+                <h2>CONTACT</h2>
+                <div class="tel">
+                    <img src="tel.png" alt="">
+                    <h4>+01 123567894</h4>
+                </div>
+                <div class="mail">
+                    <img src="mail.png" alt="">
+                    <h4>mail@domain.com</h4>
+                </div>
             </div>
-            <div class="mail">
-                <img src="mail.png" alt="">
-                <h2>mail@domain.com</h2>
+            <div class="Menu">
+                <h2>MENU</h2>
+                <h4>About</h4>
+                <h4>Medicine</h4>
+                <h4>Online Buy</h4>
             </div>
+            <div class="newsletter">
+                <h2>NEWSLETTER</h2>
+                <input type="text">
+                <button>Subscribe</button>
+            </div>
+        </footer>
+        <hr>
+        <div class="end">
+            <h3>© 2045 All Rights Reserved. Design By Cedric Brzyski</h3>
         </div>
-        <div class="Menu">
-            <h2>Menu</h2>
-            <h2>About</h2>
-            <h2>Medicine</h2>
-            <h2>Online Buy</h2>
-        </div>
-        <div class="newsletter">
-            <h1>newsletter</h1>
-            <button>Subscribe</button>
-        </div>
-    </footer>
+    </div>
 </body>
 </html>
