--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="pre">
@@ -21,17 +21,25 @@
         </div>
     </div>
     <header>
-        <div class="logo">
-            <img src="logo.png" alt="">
-        </div>
-        <div class="menu">
-            <a href="#"><h1>Home</h1></a>
-            <a href="#"><h1>About</h1></a>
-            <a href="#"><h1>News</h1></a>
-            <a href="#"><h1>History</h1></a>
-            <a href="#"><button><h1>Contact</h1></button></a>
-        </div>
+        <nav>
+            <div class="logo">
+                <i class="fas fa-rocket"></i>
+            </div>
+            <div class="toggle">
+                <i class="fas fa-bars ouvrir"></i>
+                <i class="fas fa-times fermer" id="clc"></i>
+            </div>
+            <ul class="menu">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><button class="btn">Inscription</button></li>
+                <li><button class="btn btn-secondary">Connexion</button></li>
+            </ul>
+        </nav>
     </header>
+    <script src="script.js"></script>
     <div class="buy">
         <div class="first2">
             <img src="medicine.png" alt="">
@@ -79,13 +87,12 @@
     <div class="container1">
         <div class="diapo">
             <h1>MEDICINE & HEALTH</h1>
+            <p>Buy Now</p>
             <div class="image">
-                <p>Buy Now</p>
+                <img src="med.jpg" alt="">
             </div>
-            <img src="" alt="">
             <div class="etoiles">
-                <img src="" alt="">
-                <h3>Health <span>$</span>30</h3>
+                <button><h3>Health <span>$</span>30</h3></button>
             </div>
         </div>
     </div>
