--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </div>
                 <div class="form-group" id="message">
                   <label for="exampleInputMessage"><p>Message</p></label>
-                  <input type="text" class="form-control" id="exampleInputMessage">
+                  <textarea name="" id="" cols="30" rows="10">Message</textarea>
                 </div>
                 <button type="submit" class="">Send</button>
             </form>
